solve waveform not showing up on show page bug

--- a/app/assets/stylesheets/07-recording-show.css
+++ b/app/assets/stylesheets/07-recording-show.css
@@ -62,6 +62,15 @@
     margin: 10px;
 }
 
+.recording-art-show-imgonly{
+    width: 340px;
+    height: 340px;
+    position: absolute;
+    left: 69.6%;
+    top: 2%;
+    margin: 10px;
+}
+
 .recording-info{
     position: relative;
     width: 1240px;
